style: Added styles for the restaurant card

--- a/App.css
+++ b/App.css
@@ -22,13 +22,28 @@
 
 .Body__search {
     padding: 10px;
-    
 }
 
 
 .RestaurantCard {
     width: 250px;
-    height: 300px;
+    height: 330px;
     border: 1px solid #000;
     border-radius: 10px;
+}
+
+.RestaurantCard__header > img {
+    width: 250px;
+    height: 130px;
+    border-radius: 10px 10px 0px 0px;
+}
+
+.RestaurantCard__body {
+    padding: 10px;
+}
+
+.RestaurantCard:hover {
+    border-color: orange;
+    cursor: pointer;
+    transition: 0.3s ease;
 }
