--- a/App.css
+++ b/App.css
@@ -24,12 +24,18 @@
     padding: 10px;
 }
 
+.Body__container {
+    display: flex;
+    flex-wrap: wrap;
+    
+}
 
 .RestaurantCard {
     width: 250px;
     height: 330px;
     border: 1px solid #000;
     border-radius: 10px;
+    margin: 20px;
 }
 
 .RestaurantCard__header > img {
