refactor: Refactored the conditional rendering part

--- a/src/components/Shimmer.css
+++ b/src/components/Shimmer.css
@@ -11,5 +11,5 @@
     height: 360px;
     border-radius: 10px;
     margin: 20px;
-    background-color: rgb(255, 246, 230);
+    background-color: #fff6e6;
 }
