feat: Added login logout toggle functionality

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,3 +16,12 @@
   align-items: center;
   font-size: large;
 }
+
+.Header__nav-items-btn {
+  /* font-size: 30px; */
+  height: 40px;
+  width: 40px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
